--- a/tape.ioc
+++ b/tape.ioc
@@ -1,13 +1,14 @@
 #MicroXplorer Configuration settings - do not modify
 Mcu.Family=STM32F1
 ProjectManager.MainLocation=Core/Src
+PA2.GPIO_PuPd=GPIO_PULLUP
 RCC.MCOFreq_Value=72000000
 PB13.GPIOParameters=PinState,GPIO_Label,GPIO_ModeDefaultOutputPP
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F103C8Tx
 RCC.PLLCLKFreq_Value=72000000
-PB14.GPIO_Label=POS 2_5
 PC13-TAMPER-RTC.GPIOParameters=GPIO_Label
+PB14.GPIO_Label=POS 2_5
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false
 PA9.GPIOParameters=GPIO_Label
 PA11.GPIOParameters=GPIO_Label
@@ -19,6 +20,7 @@ PB13.GPIO_Label=POS 1_2
 PB11.Signal=GPIO_Output
 PB13.Signal=GPIO_Output
 PB15.Signal=GPIO_Input
+PA2.GPIOParameters=GPIO_PuPd,GPIO_Label
 PinOutPanel.RotationAngle=0
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 ProjectManager.StackSize=0x10
@@ -39,10 +41,10 @@ PB6.Signal=GPIO_Output
 PB13.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PB12.PinState=GPIO_PIN_SET
 PA8.GPIOParameters=GPIO_Label
-Mcu.Pin6=PB0
-Mcu.Pin7=PB1
-Mcu.Pin8=PB10
-Mcu.Pin9=PB11
+Mcu.Pin6=PA7
+Mcu.Pin7=PB0
+Mcu.Pin8=PB1
+Mcu.Pin9=PB10
 PA1.GPIO_PuPd=GPIO_PULLUP
 RCC.AHBFreq_Value=72000000
 PB13.Locked=true
@@ -53,12 +55,12 @@ Mcu.Pin2=PD1-OSC_OUT
 Mcu.Pin3=PA0-WKUP
 Mcu.Pin4=PA1
 PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label
-Mcu.Pin5=PA7
+Mcu.Pin5=PA2
 ProjectManager.ProjectBuild=false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PA8.Locked=true
 PB12.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PA8.Locked=true
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 RCC.PLLMUL=RCC_PLL_MUL9
 PB12.GPIO_Label=POS 0
@@ -85,6 +87,7 @@ Mcu.Package=LQFP48
 PB1.Signal=GPIO_Output
 PA7.Locked=true
 ProjectManager.ToolChainLocation=
+PA2.GPIO_Label=CALL_PAUSE
 PB6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 PA10.Signal=GPIO_Input
@@ -95,10 +98,11 @@ PB0.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PB10.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
 ProjectManager.CustomerFirmwarePackage=
 PB15.Locked=true
+PA2.Locked=true
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 ProjectManager.ProjectFileName=tape.ioc
 PD1-OSC_OUT.Mode=HSE-External-Oscillator
-Mcu.PinsNb=23
+Mcu.PinsNb=24
 ProjectManager.NoMain=false
 PA9.GPIO_Label=MT RVS
 PB11.GPIO_Label=BTN_NEXT
@@ -153,15 +157,17 @@ ProjectManager.FreePins=false
 RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
 ProjectManager.AskForMigrate=true
 Mcu.Name=STM32F103C(8-B)Tx
+PA2.Signal=GPIO_Input
 ProjectManager.UnderRoot=true
 ProjectManager.CoupleFile=false
 RCC.SYSCLKFreq_VALUE=72000000
-Mcu.Pin22=VP_SYS_VS_Systick
+Mcu.Pin22=PB7
+Mcu.Pin23=VP_SYS_VS_Systick
 RCC.TimSysFreq_Value=72000000
 PA1.Locked=true
 PA7.GPIO_Label=BTN_PLAY_PAUSE_CALL
-Mcu.Pin20=PB6
-Mcu.Pin21=PB7
+Mcu.Pin20=PA14
+Mcu.Pin21=PB6
 PA10.Locked=true
 NVIC.ForceEnableDMAVector=true
 KeepUserPlacement=false
@@ -170,19 +176,19 @@ ProjectManager.CompilerOptimize=6
 PA11.Signal=GPIO_Input
 PA14.Signal=SYS_JTCK-SWCLK
 ProjectManager.HeapSize=0x10
-Mcu.Pin15=PA9
+Mcu.Pin15=PA8
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.Pin16=PA10
-Mcu.Pin13=PB15
-Mcu.Pin14=PA8
-Mcu.Pin19=PA14
+Mcu.Pin16=PA9
+Mcu.Pin13=PB14
+Mcu.Pin14=PB15
+Mcu.Pin19=PA13
 ProjectManager.ComputerToolchain=false
-Mcu.Pin17=PA11
-Mcu.Pin18=PA13
+Mcu.Pin17=PA10
+Mcu.Pin18=PA11
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-Mcu.Pin11=PB13
-Mcu.Pin12=PB14
-Mcu.Pin10=PB12
+Mcu.Pin11=PB12
+Mcu.Pin12=PB13
+Mcu.Pin10=PB11
 PB7.Locked=true
 PA0-WKUP.GPIO_PuPd=GPIO_PULLUP
 PB1.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
